--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost/fdevdb
-spring.datasource.username=root
-spring.datasource.password=mysql
+spring.datasource.username=appuser
+spring.datasource.password=mysql8
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+mybatis.configuration.map-underscore-to-camel-case=true
